--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,5 +5,6 @@ services:
         context: .
       environment:
         VITE_URL_API: http://localhost:3001/api/v1
+        VITE_BUILD_PATH: dist
       ports:
         - "3000:3000"
