--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^1.7.2",
     "i18next": "^23.14.0",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-datepicker": "^6.9.0",
