--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,6 @@ services:
       environment:
         VITE_URL_API: http://localhost:5001/api/v1
         VITE_BUILD_PATH: dist
-        VITE_BASE_URL: web-agenda
+        VITE_BASE_URL: /web-agenda
       ports:
         - "5000:5000"
