--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
       build:
         context: .
       environment:
-        VITE_URL_API: http://localhost:5001/api/v1
+        VITE_URL_API: http://localhost:5001/api-agenda/api/v1
         VITE_BUILD_PATH: dist
         VITE_BASE_URL: /web-agenda
       ports:
