feat: Always restart front server if it is down

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,7 @@
 services:
   web:
       image: agendamento-servicos-web
+      restart: always
       build:
         context: .
       environment:
